.vitepress/theme/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
  --vp-font-family-base: 'Poppins', 'Inter', ui-sans-serif, system-ui, sans-serif,
  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
}

table {
  max-width: 100% !important;
  width: 100% !important;
  display: flex;
  align-items: center;
  justify-content: center;
  justify-items: center;
  justify-self: center;
}

.custom-block {
  position: relative;
  font-weight: 500;
  font-style: normal;
}

.custom-block::before {
  background-image: var(--label-icon, url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Cpath d='M3 12a9 9 0 1 0 18 0a9 9 0 0 0-18 0m9-3h.01'/%3E%3Cpath d='M11 12h1v4h1'/%3E%3C/g%3E%3C/svg%3E"));
  position: absolute;
  top: 0.7rem;
  padding-left: 2rem;
  background-repeat: no-repeat;
  background-size: 1.5rem 1.5rem;
  background-position: left center;
}

.vp-doc h1 {
  margin-top: 2rem;
  margin-bottom: 1rem;
}

.top,
.middle,
.bottom,
.menu-icon {
  --color: var(--vp-c-text-1);
}

